# qihe

./: .editorconfig  .env.example  .gitignore  PROJECT_PLAN.md  README.md  design-qa.md  index.html  package-lock.json  package.json  prototype.html  vite.config.ts
backend/: .env.example  README.md
backend/app/: __init__.py  main.py
docs/: backend-development-spec.md  backend-interface-handoff.md  backend_implementation_plan.md  design-directions.md  development_framework.md  dify-output-contract.md  frontend-pages-development-spec.md  frontend_implementation_plan.md  ios-xcode-run.md  w03_ai_prompt_tests.md
docs/dify/: frontend-integration.md  hetongbang-chatflow.dsl.yml  hetongbang-workflow-plan.md
docs/reference/: qihe_frontend_prototype.html  qihe_full_development_doc.md
ios/: Package.swift  README.md
qihe/backend/: README.md  pyproject.toml
qihe/backend/app/: main.py
qihe/backend/app/api/: chat.py  contracts.py  files.py
qihe/backend/app/core/: errors.py
qihe/backend/app/models/: chat.py  contracts.py  errors.py  files.py
qihe/backend/app/prompts/: chat.md  generate.md  intent.md  review.md
qihe/backend/app/services/: chat.py
qihe/backend/app/services/contracts/: __init__.py  common.py  export_word.py  generate.py  review.py
qihe/backend/app/services/files/: __init__.py  extractor.py  storage.py
qihe/backend/app/services/llm/: base.py  dify.py  qwen.py
qihe/backend/app/tests/: test_ai_prompts.py  test_api_mvp.py  test_health.py
scripts/: dify-proxy.mjs  sync-ios-webapp.sh
src/: App.vue  manifest.json  pages.json
(+136 files in other folders)
