[project]
name = "qihe-backend"
version = "0.1.0"
description = "FastAPI backend for Qihe iPhone MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "httpx>=0.27.0,<0.29.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "uvicorn[standard]>=0.30.0,<0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]
